[package]
name = "pwb"
version = "1.0.0"
authors = ["nohupped_arch <nohupped@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.1"
dirs = "3.0.1"
toml = "0.5.6"
lazy_static = "1.4.0"
rpassword = "4.0.5"
openssl = {version = "0.10", features = ["vendored"]}
chrono = {version = "0.4.13", features = ["serde"]}
serde_derive = "1.0.114"
serde = "1.0.114"
bincode = "1.3.1"

