[package]
name = "pwb"
version = "1.0.0"
authors = ["nohupped_arch <nohupped@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version = "3.2.6", features = ["env"]}
dirs = "4.0.0"
toml = "0.5.6"
lazy_static = "1.4.0"
rpassword = "6.0.1"
openssl = {version = "0.10"}
chrono = {version = "0.4.19", features = ["serde"]}
serde_derive = "1.0.114"
serde = "1.0.114"
bincode = "1.3.1"
anyhow = "1.0.58"

